--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -64,7 +64,7 @@ ol {
   border-color: #808080;
 }
 
-button {
+#datetime-picker + button {
   border-radius: 8px;
   padding: 8px 16px;
   width: 75px;
@@ -81,11 +81,11 @@ button {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-button:hover {
+#datetime-picker + button:hover {
   background: #6c8cff;
 }
 
-button:disabled {
+#datetime-picker + button:disabled {
   background: #cfcfcf;
   color: #989898;
 }
@@ -111,4 +111,75 @@ button:disabled {
   text-transform: uppercase;
 }
 
+/* #endregion*/
+
+/* #snackbar*/
+.form {
+  margin-left: 20px;
+}
+
+input[type='number'] {
+  display: block;
+  margin-top: 8px;
+  margin-bottom: 16px;
+  padding-left: 12px;
+  padding-right: 12px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 336px;
+  height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+input[type='number']:hover {
+  border-color: #000;
+}
+
+input[type='number']:active,
+input[type='number']:focus {
+  border-color: #4e75ff;
+}
+
+fieldset {
+  display: flex;
+  gap: 48px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 24px;
+  width: 360px;
+  height: 64px;
+  padding: 0px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+fieldset:hover,
+fieldset:active,
+fieldset:focus {
+  border-color: #000;
+}
+
+legend {
+  margin-left: 28px;
+}
+
+button[type='submit'] {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 360px;
+  height: 40px;
+  background: #4e75ff;
+  border: none;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+button[type='submit']:hover {
+  background: #6c8cff;
+}
 /* #endregion*/
